// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProposalList /> should not render list if proposal is not provided 1`] = `
<p
  className="p--centered mb-40"
>
  <FormattedMessage
    id="proposal.empty"
    values={Object {}}
  />
</p>
`;

exports[`<ProposalList /> should render a collectStep establishment list 1`] = `
<Fragment>
  <Relay(ProposalListTable)
    proposals={
      Object {
        "$fragmentRefs": null,
        "$refType": null,
        "edges": Array [
          Object {
            "node": Object {
              "$fragmentRefs": null,
              "id": "1",
            },
          },
          Object {
            "node": Object {
              "$fragmentRefs": null,
              "id": "2",
            },
          },
        ],
        "totalCount": 2,
      }
    }
    step={
      Object {
        "$fragmentRefs": null,
        "$refType": null,
        "form": Object {
          "objectType": "ESTABLISHMENT",
        },
        "id": "1",
        "project": Object {
          "type": Object {
            "title": "global.consultation",
          },
        },
      }
    }
  />
</Fragment>
`;

exports[`<ProposalList /> should render a collectStep interpellation list 1`] = `
<Fragment>
  <Relay(ProposalListTable)
    proposals={
      Object {
        "$fragmentRefs": null,
        "$refType": null,
        "edges": Array [
          Object {
            "node": Object {
              "$fragmentRefs": null,
              "id": "1",
            },
          },
          Object {
            "node": Object {
              "$fragmentRefs": null,
              "id": "2",
            },
          },
        ],
        "totalCount": 2,
      }
    }
    step={
      Object {
        "$fragmentRefs": null,
        "$refType": null,
        "form": Object {
          "objectType": "PROPOSAL",
        },
        "id": "1",
        "project": Object {
          "type": Object {
            "title": "project.types.interpellation",
          },
        },
      }
    }
  />
</Fragment>
`;

exports[`<ProposalList /> should render a collectStep proposal list 1`] = `
<Fragment>
  <Relay(ProposalListTable)
    proposals={
      Object {
        "$fragmentRefs": null,
        "$refType": null,
        "edges": Array [
          Object {
            "node": Object {
              "$fragmentRefs": null,
              "id": "1",
            },
          },
          Object {
            "node": Object {
              "$fragmentRefs": null,
              "id": "2",
            },
          },
        ],
        "totalCount": 2,
      }
    }
    step={
      Object {
        "$fragmentRefs": null,
        "$refType": null,
        "form": Object {
          "objectType": "PROPOSAL",
        },
        "id": "1",
        "project": Object {
          "type": Object {
            "title": "global.consultation",
          },
        },
      }
    }
  />
</Fragment>
`;

exports[`<ProposalList /> should render a collectStep with empty interpellation list 1`] = `
<p
  className="p--centered mb-40"
>
  <FormattedMessage
    id="interpellation.empty"
    values={Object {}}
  />
</p>
`;

exports[`<ProposalList /> should render a collectStep with empty question list 1`] = `
<p
  className="p--centered mb-40"
>
  <FormattedMessage
    id="question.empty"
    values={Object {}}
  />
</p>
`;

exports[`<ProposalList /> should render a selectionStep proposal list 1`] = `
<Fragment>
  <Relay(ProposalListTable)
    proposals={
      Object {
        "$fragmentRefs": null,
        "$refType": null,
        "edges": Array [
          Object {
            "node": Object {
              "$fragmentRefs": null,
              "id": "1",
            },
          },
          Object {
            "node": Object {
              "$fragmentRefs": null,
              "id": "2",
            },
          },
        ],
        "totalCount": 2,
      }
    }
    step={
      Object {
        "$fragmentRefs": null,
        "$refType": null,
        "form": Object {
          "objectType": "PROPOSAL",
        },
        "id": "1",
        "project": Object {
          "type": Object {
            "title": "global.consultation",
          },
        },
      }
    }
  />
</Fragment>
`;
